Protocol lib warning fixes (#6266)
* fix  null check in glowing replacer

---------

Co-authored-by: jade <infernoblaze326@gmail.com>